--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     },
     "require-dev": {
         "php": "^7.3 || ^8.0",
+        "fakerphp/faker": "^1.14",
         "phpunit/phpunit": "^9.5"
     },
     "config": {
